--- a/css/style.css
+++ b/css/style.css
@@ -9812,8 +9812,10 @@ h6,
 }
 
 .page-header {
-  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/header.jpg), no-repeat center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url(../img/icecream-3.jpg), no-repeat center bottom;
   background-size: cover;
+  background-repeat: no-repeat;
+
 }
 
 .section-title::before {
